style changes: AWESOME SPOTS

--- a/src/res/css/app-default.css
+++ b/src/res/css/app-default.css
@@ -9802,75 +9802,83 @@ input[type="search"]::-webkit-search-cancel-button {
 
 /* line 43, app-default.scss */
 .spotitem {
-  height: 120px;
+  height: 130px;
   border: solid 1px;
   border-color: black;
-  border-radius: 5px;
+  border-radius: 0.2em;
   background-color: grey;
+  padding: 3px;
   word-break: break-word;
+  box-shadow: 3px 3px 0.5em 0.1em gray;
+  /*background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0)), color-stop(100%,rgba(0,0,0,0.65))); /* Chrome,Safari4+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(0, 0, 0, 0)), color-stop(3%, rgba(0, 0, 0, 0)), color-stop(100%, rgba(0, 0, 0, 0.5)));
 }
 
-/* line 52, app-default.scss */
+/* line 56, app-default.scss */
 .spot div {
   width: 100%;
 }
 
-/* line 57, app-default.scss */
+/* line 61, app-default.scss */
 .spot h2 {
   text-align: center;
   font-size: 1.5em;
 }
 
-/* line 62, app-default.scss */
+/* line 66, app-default.scss */
 .spot p {
   text-align: center;
 }
 
-/* line 67, app-default.scss */
+/* line 71, app-default.scss */
 .spot-filter-panel {
   /*	-webkit-box-shadow: 0em 0em 0em 0.3 #888;
   	box-shadow: 0em 0em 0em 0.3 #888;*/
 }
 
-/* line 72, app-default.scss */
+/* line 76, app-default.scss */
 .spot-filter-label {
   text-align: center;
   font-size: 1.5em;
 }
 
-/* line 77, app-default.scss */
+/* line 81, app-default.scss */
 .spotitem-pressed {
-  background-color: #646464 !important;
+  /*background-color: rgb(100,100,100) !important;*/
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(0, 0, 0, 0.5)), color-stop(97%, rgba(0, 0, 0, 0)), color-stop(100%, rgba(0, 0, 0, 0)));
 }
 
-/* line 81, app-default.scss */
+/* line 86, app-default.scss */
 .spotSelected {
   background-color: #6464c8;
 }
 
-/* line 87, app-default.scss */
+/* line 92, app-default.scss */
 .spotitem-checkedin {
   background-color: #64ff64;
+  /*	background-color: #c9de96; // Old browsers
+  	@include filter-gradient(#c9de96, #398235, vertical); // IE6-9
+  	@include background-image(linear-gradient(top,  #c9de96 0%,#8ab66b 44%,#398235 100%));*/
 }
 
-/* line 91, app-default.scss */
+/* line 102, app-default.scss */
 .spotitem-placed {
   background-color: #c86464;
 }
 
 @-webkit-keyframes blinker {
-  /* line 96, app-default.scss */
+  /* line 107, app-default.scss */
   from {
     opacity: 1.0;
   }
 
-  /* line 97, app-default.scss */
+  /* line 108, app-default.scss */
   to {
     opacity: 0.0;
   }
 }
 
-/* line 100, app-default.scss */
+/* line 111, app-default.scss */
 .spotitem-request {
   background-color: #c86464;
   -webkit-animation-name: blinker;
@@ -9879,17 +9887,17 @@ input[type="search"]::-webkit-search-cancel-button {
   -webkit-animation-duration: 1s;
 }
 
-/* line 111, app-default.scss */
+/* line 123, app-default.scss */
 .loginbox {
   background-color: #6464c8;
 }
 
-/* line 115, app-default.scss */
+/* line 127, app-default.scss */
 .loginbox-field {
   margin-bottom: 0.5em;
 }
 
-/* line 119, app-default.scss */
+/* line 131, app-default.scss */
 .spotdetail {
   background-color: white;
   border: 2px solid grey;
@@ -9897,38 +9905,38 @@ input[type="search"]::-webkit-search-cancel-button {
   /*padding: 8px;*/
 }
 
-/* line 126, app-default.scss */
+/* line 138, app-default.scss */
 .spotdetail-titlebar {
   border-top-left-radius: 0.3em;
   border-top-right-radius: 0.3em;
 }
 
-/* line 131, app-default.scss */
+/* line 143, app-default.scss */
 .spotdetail-toolbar {
   background-color: white;
   border-top: 2px solid black;
   padding-top: 3px;
 }
 
-/* line 137, app-default.scss */
+/* line 149, app-default.scss */
 .spotdetail-customer-name {
   word-break: break-word;
 }
 
-/* line 145, app-default.scss */
+/* line 157, app-default.scss */
 .spotdetail-customer-flag {
   background-color: red;
   float: left;
   margin-right: 3px;
 }
 
-/* line 151, app-default.scss */
+/* line 163, app-default.scss */
 .spotdetail-toolbar-button {
   margin-right: 5px;
   margin-left: 5px;
 }
 
-/* line 156, app-default.scss */
+/* line 168, app-default.scss */
 .spotdetail-status {
   position: relative;
   margin: 5px;
@@ -9936,28 +9944,28 @@ input[type="search"]::-webkit-search-cancel-button {
   /*float: left;*/
 }
 
-/* line 163, app-default.scss */
+/* line 175, app-default.scss */
 .spotdetail-status .order_placed {
   border: 1px solid black;
   background-color: red;
   padding: 3px;
 }
 
-/* line 169, app-default.scss */
+/* line 181, app-default.scss */
 .spotdetail-status .payment_request {
   border: 1px solid black;
   background-color: red;
   padding: 3px;
 }
 
-/* line 175, app-default.scss */
+/* line 187, app-default.scss */
 .spotdetail-status .checkedin {
   border: 1px solid black;
   background-color: green;
   padding: 3px;
 }
 
-/* line 181, app-default.scss */
+/* line 193, app-default.scss */
 .spotdetail-statistics {
   position: relative;
   top: 10px;
@@ -9971,7 +9979,7 @@ input[type="search"]::-webkit-search-cancel-button {
   min-width: 40px;
 }
 
-/* line 194, app-default.scss */
+/* line 206, app-default.scss */
 .spotdetail-close {
   background-color: black;
   border-radius: 1em;
@@ -9985,14 +9993,14 @@ input[type="search"]::-webkit-search-cancel-button {
   top: 3px;
 }
 
-/* line 207, app-default.scss */
+/* line 219, app-default.scss */
 .spotdetailitem-customer-label {
   background-color: white;
   text-align: center;
   font-weight: bold;
 }
 
-/* line 213, app-default.scss */
+/* line 225, app-default.scss */
 .spotdetailitem-flag {
   width: 10%;
   top: 0;
@@ -10003,14 +10011,14 @@ input[type="search"]::-webkit-search-cancel-button {
   margin-left: 5px;
 }
 
-/* line 224, app-default.scss */
+/* line 236, app-default.scss */
 .spotdetailitem-order {
   /*width: 70%;*/
   margin-bottom: 20px;
   font-size: 0.8em;
 }
 
-/* line 230, app-default.scss */
+/* line 242, app-default.scss */
 .spotdetailitem-order h2 {
   font-weight: bold;
   /*float: left;*/
@@ -10018,34 +10026,34 @@ input[type="search"]::-webkit-search-cancel-button {
   margin-right: 10px;
 }
 
-/* line 237, app-default.scss */
+/* line 249, app-default.scss */
 .spotdetailitem-order h4 {
   font-size: 1em;
 }
 
-/* line 241, app-default.scss */
+/* line 253, app-default.scss */
 .spotdetailitem-order h3 {
   font-size: 1em;
   font-weight: bold;
 }
 
-/* line 246, app-default.scss */
+/* line 258, app-default.scss */
 .spotdetailitem-order-cancel {
   text-decoration: line-through;
 }
 
-/* line 250, app-default.scss */
+/* line 262, app-default.scss */
 .spotdetailitem-order-cancel h2 {
   text-decoration: line-through;
 }
 
-/* line 254, app-default.scss */
+/* line 266, app-default.scss */
 .x-button-icon.spotdetailitem-confirm, .x-button .x-button-icon.x-icon-mask.spotdetailitem-confirm {
   -webkit-mask-image: url("../images/check_icon.png");
   /*background-image: url('../images/check_icon.png');*/
 }
 
-/* line 259, app-default.scss */
+/* line 271, app-default.scss */
 .spotdetailitem-order div:nth-of-type(1) {
   /*position: absolute; 
   right: 0; 
@@ -10054,13 +10062,13 @@ input[type="search"]::-webkit-search-cancel-button {
   	padding-right: 5px;*/
 }
 
-/* line 267, app-default.scss */
+/* line 279, app-default.scss */
 .spotdetailitem-order .choices {
   clear: both;
   text-align: left;
 }
 
-/* line 272, app-default.scss */
+/* line 284, app-default.scss */
 .spotdetailitem-confirm {
   top: 0;
   /*position: absolute;*/
@@ -10068,7 +10076,7 @@ input[type="search"]::-webkit-search-cancel-button {
   /*width: 10%;*/
 }
 
-/* line 279, app-default.scss */
+/* line 291, app-default.scss */
 .spotdetailitem-cancel {
   /*width: 10%;*/
   top: 0;
@@ -10077,18 +10085,18 @@ input[type="search"]::-webkit-search-cancel-button {
   /*float: left;*/
 }
 
-/* line 286, app-default.scss */
+/* line 298, app-default.scss */
 .cancel-all {
   -webkit-mask-image: url("res/images/forbidden.png");
 }
 
 /* request view */
-/* line 292, app-default.scss */
+/* line 304, app-default.scss */
 .requestitem-container {
   margin: 0.3em;
 }
 
-/* line 296, app-default.scss */
+/* line 308, app-default.scss */
 .requestitem-wrapper {
   /*border: 1px solid #C3C3C3;*/
   /*background-color: #c3c3c3;*/
@@ -10097,7 +10105,7 @@ input[type="search"]::-webkit-search-cancel-button {
   color: black;
 }
 
-/* line 304, app-default.scss */
+/* line 316, app-default.scss */
 .requestitem-spot {
   border: 1px solid #000;
   background-color: #4975A2;
@@ -10108,7 +10116,7 @@ input[type="search"]::-webkit-search-cancel-button {
   word-break: break-word;
 }
 
-/* line 314, app-default.scss */
+/* line 326, app-default.scss */
 .requestitem-customer {
   border: 1px solid #000;
   background-color: #C6D7E9;
@@ -10123,7 +10131,7 @@ input[type="search"]::-webkit-search-cancel-button {
   /*width: 65%;*/
 }
 
-/* line 328, app-default.scss */
+/* line 340, app-default.scss */
 .requestitem-time {
   border: 1px solid #000;
   background-color: #DFE8CB;
@@ -10137,13 +10145,13 @@ input[type="search"]::-webkit-search-cancel-button {
   /*width: 25%;*/
 }
 
-/* line 341, app-default.scss */
+/* line 353, app-default.scss */
 .requestitem-wrapper-pressed {
   /*background-color: #F5B800;*/
   color: white;
 }
 
-/* line 346, app-default.scss */
+/* line 358, app-default.scss */
 .requestitem-alert {
   -webkit-animation-name: blinker;
   -webkit-animation-iteration-count: infinite;
@@ -10152,12 +10160,12 @@ input[type="search"]::-webkit-search-cancel-button {
 }
 
 /* history view */
-/* line 354, app-default.scss */
+/* line 366, app-default.scss */
 .historyitem-container {
   margin: 0.3em;
 }
 
-/* line 358, app-default.scss */
+/* line 370, app-default.scss */
 .historyitem-wrapper {
   /*border: 1px solid #C3C3C3;*/
   /*background-color: #c3c3c3;*/
@@ -10166,7 +10174,7 @@ input[type="search"]::-webkit-search-cancel-button {
   color: black;
 }
 
-/* line 366, app-default.scss */
+/* line 378, app-default.scss */
 .historyitem-spot {
   border: 1px solid #000;
   background-color: #4975A2;
@@ -10177,7 +10185,7 @@ input[type="search"]::-webkit-search-cancel-button {
   word-break: break-word;
 }
 
-/* line 376, app-default.scss */
+/* line 388, app-default.scss */
 .historyitem-customer {
   border: 1px solid #000;
   background-color: #C6D7E9;
@@ -10192,7 +10200,7 @@ input[type="search"]::-webkit-search-cancel-button {
   /*width: 20%;*/
 }
 
-/* line 390, app-default.scss */
+/* line 402, app-default.scss */
 .historyitem-time {
   border: 1px solid #000;
   background-color: #DFE8CB;
@@ -10207,7 +10215,7 @@ input[type="search"]::-webkit-search-cancel-button {
   /*width: 15%;*/
 }
 
-/* line 404, app-default.scss */
+/* line 416, app-default.scss */
 .historyitem-total {
   border: 1px solid #000;
   background-color: #D0F5A9;
@@ -10220,12 +10228,12 @@ input[type="search"]::-webkit-search-cancel-button {
   /*width: 10%;*/
 }
 
-/* line 416, app-default.scss */
+/* line 428, app-default.scss */
 .historyitem-wrapper-pressed {
   color: white;
 }
 
-/* line 420, app-default.scss */
+/* line 432, app-default.scss */
 .history-info-panel {
   display: -webkit-box;
   -webkit-box-orient: vertical;
@@ -10234,7 +10242,7 @@ input[type="search"]::-webkit-search-cancel-button {
   background-color: #C3C3C3;
 }
 
-/* line 428, app-default.scss */
+/* line 440, app-default.scss */
 .history-info-panel .row {
   display: -webkit-box;
   -webkit-box-orient: horizontal;
@@ -10242,13 +10250,13 @@ input[type="search"]::-webkit-search-cancel-button {
   /*	-webkit-box-pack: end;*/
 }
 
-/* line 435, app-default.scss */
+/* line 447, app-default.scss */
 .history-info-panel .row > div {
   /*-webkit-box-flex: 1;*/
   width: 50%;
 }
 
-/* line 440, app-default.scss */
+/* line 452, app-default.scss */
 .history-detail-list-title {
   font-size: 1.2em;
   font-weight: bold;
@@ -10257,81 +10265,87 @@ input[type="search"]::-webkit-search-cancel-button {
 }
 
 /* connections status indicator in bottom toolbar */
-/* line 450, app-default.scss */
-.status-indicator .ONLINE {
-  width: 1em;
-  height: 1em;
-  border-radius: 0.5em;
+/* line 464, app-default.scss */
+.status-indicator-ONLINE .status {
+  width: 1.2em;
+  height: 1.2em;
+  border-radius: 0.75em;
   float: right;
-  margin: 0px 0.5em;
-  background-color: green;
+  margin: 0 .5em;
+  background-color: #64FF64;
+  border: 1px solid black;
 }
 
-/* line 459, app-default.scss */
-.status-indicator .TIMEOUT {
-  width: 1em;
-  height: 1em;
-  border-radius: 0.5em;
+/* line 478, app-default.scss */
+.status-indicator-TIMEOUT .status {
+  width: 1.2em;
+  height: 1.2em;
+  border-radius: 0.75em;
   float: right;
-  margin: 0px 0.5em;
+  margin: 0 .5em;
   background-color: yellow;
+  border: 1px solid black;
 }
 
-/* line 468, app-default.scss */
-.status-indicator .RECONNECT {
-  width: 1em;
-  height: 1em;
-  border-radius: 0.5em;
+/* line 490, app-default.scss */
+.status-indicator-RECONNECT .status {
+  width: 1.2em;
+  height: 1.2em;
+  border-radius: 0.75em;
   float: right;
-  margin: 0px 0.5em;
+  margin: 0 .5em;
   background-color: yellow;
+  border: 1px solid black;
 }
 
-/* line 477, app-default.scss */
-.status-indicator .INITIALIZING {
-  width: 1em;
-  height: 1em;
-  border-radius: 0.5em;
+/* line 502, app-default.scss */
+.status-indicator-INITIALIZING .status {
+  width: 1.2em;
+  height: 1.2em;
+  border-radius: 0.75em;
   float: right;
-  margin: 0px 0.5em;
+  margin: 0 .5em;
   background-color: yellow;
+  border: 1px solid black;
 }
 
-/* line 486, app-default.scss */
-.status-indicator .CONNECTION_LOST {
-  width: 1em;
-  height: 1em;
-  border-radius: 0.5em;
+/* line 514, app-default.scss */
+.status-indicator-CONNECTION_LOST .status {
+  width: 1.2em;
+  height: 1.2em;
+  border-radius: 0.75em;
   float: right;
-  margin: 0px 0.5em;
-  background-color: red;
+  margin: 0 .5em;
+  background-color: #FA5858;
+  border: 1px solid black;
 }
 
-/* line 495, app-default.scss */
-.status-indicator .DISCONNECTED {
-  width: 1em;
-  height: 1em;
-  border-radius: 0.5em;
+/* line 526, app-default.scss */
+.status-indicator-DISCONNECTED .status {
+  width: 1.2em;
+  height: 1.2em;
+  border-radius: 0.75em;
   float: right;
-  margin: 0px 0.5em;
-  background-color: red;
+  margin: 0 .5em;
+  background-color: #FA5858;
+  border: 1px solid black;
 }
 
 /* Volume Button */
-/* line 506, app-default.scss */
+/* line 539, app-default.scss */
 .volume_mute {
   background-image: none !important;
   background-color: #FA5858 !important;
 }
 
-/* line 511, app-default.scss */
+/* line 544, app-default.scss */
 .volume {
   background-image: none !important;
   background-color: #64FF64 !important;
 }
 
 /* Lock button */
-/* line 518, app-default.scss */
+/* line 551, app-default.scss */
 .locked-button .x-button-icon {
   -webkit-mask-image: url("/cockpit/res/images/lock_closed.png");
   background-color: black;
