--- a/src/res/css/app-default.scss
+++ b/src/res/css/app-default.scss
@@ -158,6 +158,10 @@
 	background-color: red;
 	float: left;
 	margin-right: 3px;
+	width: 20px;
+	height: 20px;
+	-webkit-mask-size: 20px;
+	-webkit-mask-image: url('../images/request.png');
 }
 
 .spotdetail-toolbar-button {
